updated swagger spec to include certificate list and creation
